--- a/ipywidgets/01_ipywidgets_intro.ipynb
+++ b/ipywidgets/01_ipywidgets_intro.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4b57f1af6914e4c8b18a72a4f0fde72",
+       "model_id": "f4e9008f5cd04946a76838741ca9f9ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,11 +58,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = widgets.IntSlider()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77c818939c3f4ff3870f448ab3f2235f",
+       "model_id": "e257b36ba8da43d3b64583c03ffbf9ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,8 +93,6 @@
     }
    ],
    "source": [
-    "from IPython.display import display\n",
-    "w = widgets.IntSlider()\n",
     "display(w)"
    ]
   },
@@ -89,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +114,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +154,7 @@
        " 'value']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +174,7 @@
        "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,13 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39836a17f12a452d9c9413498bbf4a85",
+       "model_id": "fa690bf2ec2844558bfdc65b6eeb29b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,46 +216,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "from ipywidgets import interact, interactive"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Widget with `interactive` syntax"
+    "### Widget with `interact` function syntax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "cars = sns.load_dataset('mpg')\n",
     "\n",
     "def bandwidth_widget(bw=1):\n",
-    "    sns.kdeplot(cars.horsepower, bw_adjust=bw, lw=3, fill=True)\n",
+    "    sns.kdeplot(cars.horsepower, lw=3, fill=True, bw_adjust=bw)\n",
     "    plt.xlim(-30, 300)\n",
-    "    plt.ylim(0, 0.03)"
+    "    plt.ylim(0, 0.03);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd2eda74b2824d15a3b6ec73f7fbe4c7",
+       "model_id": "746a7fcc0cdc4672b50a760515e55a96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,7 +266,7 @@
     }
    ],
    "source": [
-    "interactive(bandwidth_widget, bw=(0.1, 3, 0.1))"
+    "widgets.interact(bandwidth_widget, bw=(.1, 3));"
    ]
   },
   {
@@ -264,18 +278,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "824e94efc85241c8ad727219733710be",
+       "model_id": "990fce77c7ce42f799807ac596802ba2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='bw', max=3.0, min=0.1), Output()), _dom_classes=('wi…"
+       "interactive(children=(FloatSlider(value=2.0, description='bw', max=3.0, min=0.1), Output()), _dom_classes=('wi…"
       ]
      },
      "metadata": {},
@@ -283,11 +297,11 @@
     }
    ],
    "source": [
-    "@interact(bw=(0.1, 3, 0.1))\n",
-    "def bw_widget(bw=1):\n",
-    "    sns.kdeplot(cars.horsepower, bw_adjust=bw, lw=3, shade=True)\n",
+    "@widgets.interact(bw=(.1, 3, .1))\n",
+    "def bw_widget(bw=2):\n",
+    "    sns.kdeplot(cars.horsepower, lw=3, fill=True, bw_adjust=bw)\n",
     "    plt.xlim(-30, 300)\n",
-    "    plt.ylim(0, 0.03)"
+    "    plt.ylim(0, 0.03);"
    ]
   },
   {
@@ -306,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6a48343450b469bb6669162609d8340",
+       "model_id": "8ab69c55aba14007add648b000e0e1f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,10 +351,10 @@
     }
    ],
    "source": [
-    "interactive(kde_widget, \n",
-    "            fill=True,\n",
-    "            color=['blue', 'red', 'green', 'orange']\n",
-    "            )"
+    "widgets.interact(kde_widget, \n",
+    "                 fill=True,\n",
+    "                 color=['blue', 'red', 'green', 'orange']\n",
+    "                 );"
    ]
   },
   {
@@ -352,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,13 +434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bfc8960eda942548827f79541883690",
+       "model_id": "0805bc6e7b3c4885bf06c736e2c05352",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +453,7 @@
     }
    ],
    "source": [
-    "interactive(find_sign, date=w)"
+    "widgets.interact(find_sign, date=w);"
    ]
   },
   {
@@ -451,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,13 +477,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8590dd645d9d4c5b9e3ed594545563eb",
+       "model_id": "5596b4b27f1649fc8be14e38bbf1ef8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,7 +496,7 @@
     }
    ],
    "source": [
-    "interactive(bandwidth_widget_scaled, bw=widgets.Play(min=1, max=20))"
+    "widgets.interact(bandwidth_widget_scaled, bw=widgets.Play(min=1, max=20));"
    ]
   },
   {
